// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal test Modal Body  1`] = `
<div
  className="relative p-6 flex-auto"
>
  <div />
</div>
`;

exports[`Modal test Modal Footer  1`] = `
<div
  className="flex items-center justify-end p-6 border-t border-solid border-gray-300 rounded-b"
>
  <button
    className="text-red-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1"
    onClick={[Function]}
    style={
      Object {
        "transition": "all .15s ease",
      }
    }
    type="button"
  >
    Close
  </button>
  <button
    className="bg-green-500 text-white active:bg-green-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1"
    onClick={[Function]}
    style={
      Object {
        "transition": "all .15s ease",
      }
    }
    type="button"
  >
     
  </button>
</div>
`;

exports[`Modal test Modal Header  1`] = `
<div
  className="flex items-start justify-between p-5 border-b border-solid border-gray-300 rounded-t"
>
  <h3
    className="text-3xl font-semibold"
  >
     
  </h3>
  <button
    className="p-1 ml-auto bg-transparent border-0 text-black opacity-5 float-right text-3xl leading-none font-semibold outline-none focus:outline-none"
    onClick={[Function]}
    type="button"
  >
    <span
      className="bg-transparent text-black opacity-5 h-6 w-6 text-2xl block outline-none focus:outline-none"
    >
      ×
    </span>
  </button>
</div>
`;

exports[`Modal test Modal component 1`] = `null`;
